# dry-play

./: .gitignore  README.md  requirements.txt
auth0/: README.md  access_token_scopes_rule.txt
auth0/backend_django/: requirements.txt
auth0/backend_django/apiexample/: urls.py
auth0/frontend_angular2/: package.json
auth0/frontend_angular2/src/app/: app.component.html  app.component.ts  app.module.ts
auth0/frontend_angular2/src/environments/: environment.ts
cpp/: CMakeLists.txt
cpp/src/coursera/cpp_for_c_part_a/week1/: CMakeLists.txt  assignment.cpp  dice.cpp  generic_sum.cpp
cpp/src/examples/: CMakeLists.txt
cpp/src/examples/boost/: regex.cpp  shared_memory.cpp  thread.cpp
cpp/src/examples/graphics/: raytracing_spheres.cpp
cpp/src/examples/std/: initializer_list.cpp
python/: README.md  requirements.txt
python/examples/helloworld/: dataframe_1.py  plyplus_tutorial.py
python/examples/helloworld/resources/: plyplus
python/examples/src/: excel_reader.py  matplotlib_1.py  plyplus_tutorial.py
python/examples/src/blockchain/: blockchain.py
python/plotly_dash/: README.md  requirements.txt
python/plotly_dash/resources/poc/: data.csv
python/plotly_dash/src/poc/: dynamic_controls_main.py  poc_main.py
src/auth0/: README.md
src/auth0/backend/django/: requirements.txt
src/auth0/backend_django/: .env  README.md
src/auth0/backend_django/apiexample/: settings.py
src/auth0/backend_django/auth0_util/: auth0.py
src/auth0/backend_django/auth0authorization/: auth.py  auth0.py  urls.py  user.py  (+1 more)
src/python/examples/: README.md  requirements.txt
(+50 files in other folders)
